src/css/components/_articles.scss
.articles {
    padding-top: calc(var(--gutter) * 10);

    &__inner {
        max-width: var(--content-width);
        width: 100%;
        padding: 0 var(--gutter);
        margin: 0 auto;

        > h1 {
            font-size: 3rem;
            font-weight: bold;
            letter-spacing: 2px;
            margin-bottom: var(--gutter);
        }

        > p {
            margin-bottom: calc(var(--gutter) * 2);
        }
    }

    &__item {
        border-radius: 6px;
        border: 2px solid transparent;
        background-color: var(--white);
        box-shadow: 0px 0px 10px 1px
            hsla(var(--dark-hue), var(--dark-sat), var(--dark-lightness), 25%);
        color: var(--dark);
        padding: calc(var(--gutter) * 1.5);
        border-radius: 3px;
        margin-bottom: calc(var(--gutter) * 2);

        > h1 {
            font-weight: bold;
            margin-bottom: calc(var(--gutter) * 1);
        }

        > p {
            font-size: 0.9rem;
        }
    }
}

